fix div closing.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   Enjoy hacking!
 
   My previous boilerplate experience is here.</p>
-
+</div>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
